# EvidenceLab

./: .dockerignore  .env.example  .gitignore  README.md  bootstrap_postgres.sh  pyproject.toml  requirements.txt
config/suricata/: suricata.yaml
data/: filtered_mitre_mappings.csv
data/suricata-rules/: rlm-post-compromise.rules
docker/: .dockerignore  Dockerfile  Dockerfile.repl  docker-compose.yml  entrypoint.sh
docs/: user_manual.md
docs/plans/: 2026-03-14-evidencelab-design.md  2026-03-14-pcap-ingest-pipeline-design.md  2026-03-14-sphinx-ai-design.md
sample_data/: suricata_alerts.json  vol_pslist.json  win_evt_security.json  zeek_conn.json
sql/: 001_core_schema.sql  002_rbac.sql  003_worklog.sql  004_precomputed.sql  005_query_patterns.sql  006_plugin_migrations.sql  007_case_notes.sql  008_analytics_toggle.sql  009_background_jobs.sql  010_records_job_id.sql  011_correlation_cases.sql  012_detection_rules.sql  013_query_patterns_review.sql  014_detection_rules_decouple.sql  015_repl_role_rls.sql  016_detection_matches.sql
src/: Sphinx_Logo.tiff
src/sphinx/core/: analytics_ops.py  analytics_routes.py  app.py  attack_windows_presets.py  auth.py  auth_routes.py  case_manager.py  config.py  dashboard.py  db.py  entity_extractor.py  frontend.py  ingest_routes.py  models.py  planner.py  plugin_loader.py  precompute.py  query_learner.py  repl_client.py  repl_server.py  report.py  rlm_loop.py  rule_assistant.py  sandbox.py  sig_generator.py  sse.py  task_runner.py
src/sphinx/core/templates/: admin_data.html  admin_query_learning.html  admin_rule_edit.html  (+27 more)
(+24 files in other folders)
